--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "electron": "^9.4.0",
     "electron-reload": "^1.5.0",
-    "mocha": "^6.2.0",
-    "p5": "^0.9.0"
+    "mocha": "^6.2.0"
+  },
+  "devDependencies": {
+    "electron-reloader": "^1.2.1"
   }
 }
